--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
           <nav>
-            <h2></h2>
+            <h2>Ma<span class="Primary-color">r</span>y</h2>
+            <ul>
+                <li>Portfolio</li>
+                <li>Blogs</li>
+                <button class="btn-primary">Hire me</button>
+            </ul>
           </nav>
     </header>
     <main>
