--- a/index.html
+++ b/index.html
@@ -1,41 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
-    <!-- google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
-    <header>
-          <nav>
-            <h2>Ma<span class="Primary-color">r</span>y</h2>
-            <ul>
-                <li>Portfolio</li>
-                <li>Blogs</li>
-                <button class="btn-primary">Hire me</button>
-            </ul>
-          </nav>
-          <div class="banner">
-            <div>
-             <h3 class="banner-subtitle">Hi, I am</h3>
-            <h1 class="banner-title">Mary Hardy</h1>
-            <p class="p-text">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <button class="btn-primary">Download CV</button>
-            <button>contact</button>
-            </div>
-            <img src="./images/hardy.png" alt="">
-
+  <header class="header">
+    <nav>
+      <h2>Ma<span class="Primary-color">r</span>y</h2>
+      <ul>
+        <li>Portfolio</li>
+        <li>Blogs</li>
+        <button class="btn-primary">Hire me</button>
+      </ul>
+    </nav>
+    <div class="banner">
+      <div> 
+        <h3 class="banner-subtitle">Hi, I am</h3>
+        <h1 class="banner-title">Mary Hardy</h1>
+        <p class="p-text">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to
+          society behaved moments.</p>
+        <button class="btn-primary">Download CV</button>
+        <button type="submit " class="main-btn">contact</button>
+      </div>
+      <div class="banner-img">
+        <img src="./images/hardy.png" alt="">
+      </div>
+    </div>
+  </header>
+  <main>
+     <section class="about">
+         <h3 class="section-title">About me</h3>
+         <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+          <div class="about-info-container">
+            <div class="about-info">
+              <p class="info-title">Name:</p>
+              <p class="info-description">Mary Hardy</p>
+             </div>
+             <div class="about-info">
+              <p class="info-title">Email:</p>
+              <p class="info-description">info@gmail.com</p>
+             </div>
+             <div class="about-info">
+              <p class="info-title">speciality</p>
+              <p class="info-description">web Deb</p>
+             </div>
+             <div class="about-info">
+              <p class="info-title">Location</p>
+              <p class="info-description">Dhaka</p>
+             </div>
           </div>
-    </header>
-    <main>
-       
-    </main>
-    <footer>
+        </section>
+        <section class="what-i-do">
+             <h3 class="section-title">What I do</h3>
+             <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+             <div class="skills-container">
+              <div class="skill">
+                <img src="./images/icons/js.png" alt="">
+                <p class="skill-title">Vanila Javascript</p>
+                <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos suscipit commodi quibusdam repellat maxime distinctio consectetur beatae voluptate, praesentium ratione?</p>
+              </div>
+              <div class="skill">
+                <img src="./images/icons/nodejs.png" alt="">
+                <p class="skill-title">Node js</p>
+                <p class="skill-description">Saepe possimus asperiores alias dolorum molestiae corporis inventore quas earum laudantium? Tempore minus quae deleniti rerum voluptas! Accusamus, nisi repellendus.</p>
+              </div>
+              <div class="skill">
+                <img src="./images/icons/react.png" alt="">
+                <p class="skill-title">React</p>
+                <p class="skill-description">Numquam ex laborum laboriosam, hic consectetur sunt vel recusandae dicta esse quas nemo fugit, est illum! Similique accusamus saepe fugiat!</p>
+              </div>
+              <div class="skill">
+                <img src="./images/icons/mongo.png" alt="">
+                <p class="skill-title">MongoDB</p>
+                <p class="skill-description">Aliquam asperiores perferendis ducimus pariatur labore quod, nemo rerum et modi explicabo. Adipisci perspiciatis ducimus temporibus culpa excepturi quae pariatur.</p>
+              </div>
+             </div>
+       </section>
+       <section class="my-resume">
+              <h3 class="section-title">A summary of my resume</h3>
+              <div class="resume-content">
+                <div class="resume-title">
+                  <h3>My education</h3>
+                <div class="resume-item">
+                  <h4 class="title">Master in Computer Engineering</h4>
+                  <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                  <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div><hr>
+                <div class="resume-item">
+                  <h4 class="title">Master in Computer Engineering</h4>
+                  <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                  <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div><hr>
+                <div class="resume-item">
+                  <h4 class="title">Master in Computer Engineering</h4>
+                  <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                  <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+              </div>
+                <div class="resume-title">
+                  <h3>My experience</h3>
+                  <div class="resume-item">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                  </div><hr>
+                  <div class="resume-item">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                  </div><hr>
+                  <div class="resume-item">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                  </div>
+              </div>
+           </div>
+           <div class="text-center">
+            <button class="btn-primary">Download CV</button>
+           </div>
+       </section>
+       <section class="contact">
+        <div class="connect">
+        <h1>Lets connect</h1>
+        <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+       <a href="#">
+        <img src="./images/icons/facebook.png" alt="">
+       </a>
+       <a href="#">
+        <img src="./images/icons/insta.png" alt="">
+       </a>
+       <a href="#">
+        <img src="./images/icons/twitter.png" alt="">
+       </a>
+        </div>
+        <div class="message">
+          <h1>Lets message me</h1>
+          <input type="text" placeholder="Your Name"><br>
+          <input type="email" placeholder="Your Email"><br>
+          <textarea name="Massage" id="" cols="30" rows="10" placeholder="Message"></textarea>
+          <button class="btn-primary">Submit</button>
+        </div>
+       </section>
+  </main>
+  <footer>
 
-    </footer>
+  </footer>
 </body>
+
 </html>
