--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
+  <script src="https://kit.fontawesome.com/0028caecef.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,8 +31,8 @@
         <h1 class="banner-title">Mary Hardy</h1>
         <p class="p-text">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to
           society behaved moments.</p>
-        <button class="btn-primary">Download CV</button>
-        <button type="submit " class="main-btn">contact</button>
+        <button class="btn-primary"><i class="fa-solid fa-download"></i> Download </button>
+        <button type="submit " class="main-btn"><i class="fa-solid fa-phone"></i> contact</button>
       </div>
       <div class="banner-img">
         <img src="./images/hardy.png" alt="">
@@ -128,7 +129,7 @@
               </div>
            </div>
            <div class="text-center">
-            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary"><i class="fa-solid fa-download"></i> Download</button>
            </div>
        </section>
        <section class="contact">
